# wayland-osd

./: PKGBUILD  README.md
.github/workflows/: build.yml
examples/: audio-osd.fish
examples/pipewire-monitor/: Cargo.toml
examples/pipewire-monitor/src/: main.rs
wayland-osd-client/: Cargo.toml
wayland-osd-client/src/: main.rs
wayland-osd-server/: Cargo.toml
wayland-osd-server/src/: main.rs
wayland-osd-wireplumber-monitor/: .Nice.mk  .clang-tidy  Makefile  README.md  device-mappings.conf
wayland-osd-wireplumber-monitor/src/: main.c
