[package]
name = "wayland-osd-client"
version = "0.1.0"
edition = "2021"

[dependencies]
zbus = { version = "3.14", default-features = false, features = ["tokio"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
clap = { version = "4.3", features = ["derive"] }
anyhow = "1.0"
