[package]
name = "wayland-osd-server"
version = "0.1.0"
edition = "2021"

[dependencies]
gtk = { version = "0.9.5", package = "gtk4", features = ["v4_6"] }
gtk4-layer-shell = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
parking_lot = "0.12"
futures = "0.3"
nix = { version = "0.26", features = ["fs"] }
